# multimodal-sync-toolkit

./: .gitignore  LICENSE  README.md
acquisition/: README.md
acquisition/arduino/: README.md
acquisition/arduino/led_buzzer_demo/: README.md  led_buzzer_demo.ino
acquisition/arduino/sync_pulse_generator/: README.md  (+1 more)
acquisition/bonsai/: README.md
acquisition/configs/: README.md  audio_video_50hz_example.yaml  example_v1_50hz.yaml  example_v1_50hz_1h_segments.yaml  example_v1_50hz_legacy_ffmpeg422.yaml  example_v1_50hz_legacy_ffmpeg422_1h_segments.yaml  example_v2_50hz_1h_segments_legacy_ffmpeg422.yaml
acquisition/envs/: acquisition.yaml  acquisition_legacy_ffmpeg422.yaml
acquisition/scripts/: README.md  run_acquisition.py
docs/: session_time_model.md
sync_analysis/: README.md  pyproject.toml
sync_analysis/configs/: arena_a2LHv1_50hz_example.yaml  arena_a2LHv1i_ephys_50hz_example.yaml  audio_video_50hz_example.yaml  example_a1v1i_50hz.yaml  example_a2v2_50hz.yaml  example_session_01_50hz.yaml
sync_analysis/configs/demo_video/: example_video_audio_waveform.yaml
sync_analysis/envs/: analysis.yaml
sync_analysis/notebooks/: README.md  design_demo_video_frame.ipynb  inspect_audio_lsb_sync.ipynb  inspect_intan_digital_sync.ipynb  map_buzzer_led_to_session_timebase.ipynb
sync_analysis/scripts/: README.md  make_demo_video.py  validate_session.py
sync_analysis/src/multimodal_sync/: __init__.py  config.py  continuous.py  events.py  files.py  media_info.py  models.py  segments.py  sync_pulses.py  timebase.py  validation.py
sync_analysis/src/multimodal_sync/demo_video/: __init__.py  audio.py  components.py  context.py  encoder.py  renderer.py  timeline.py  video.py
sync_analysis/src/multimodal_sync/modalities/: __init__.py  audio.py  intan.py  video.py
(+4 files in other folders)
