[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multimodal-sync-analysis"
version = "0.1.0"
description = "Session validation and timebase mapping for synchronized multimodal recordings"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "pyyaml>=6.0.1",
]

[project.optional-dependencies]
audio = [
  "soundfile>=0.12.1",
]
video = [
  "opencv-python-headless>=4.9",
  "ffmpeg-python>=0.2.0",
]
demo-video = [
  "soundfile>=0.12.1",
  "opencv-python-headless>=4.9",
  "ffmpeg-python>=0.2.0",
  "matplotlib>=3.8",
]
notebooks = [
  "jupyterlab>=4.0",
  "matplotlib>=3.8",
]
all = [
  "soundfile>=0.12.1",
  "opencv-python-headless>=4.9",
  "ffmpeg-python>=0.2.0",
  "jupyterlab>=4.0",
  "matplotlib>=3.8",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
